Include JavaFX and Nashorn in the Maven dependencies (and the built JAR) so we're not stuck with Java 1.8 forever