@@ -3,8 +3,6 @@ package com.lilithsthrone.game.dialogue.utils;
 import java.io.File;
 import java.time.DayOfWeek;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.time.Month;
 import java.time.format.TextStyle;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -30,12 +28,10 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 
 import com.lilithsthrone.game.PropertyValue;
-import com.lilithsthrone.game.character.EquipClothingSetting;
 import com.lilithsthrone.game.character.GameCharacter;
 import com.lilithsthrone.game.character.attributes.AbstractAttribute;
 import com.lilithsthrone.game.character.attributes.AffectionLevel;
 import com.lilithsthrone.game.character.attributes.AffectionLevelBasic;
-import com.lilithsthrone.game.character.attributes.AlcoholLevel;
 import com.lilithsthrone.game.character.attributes.Attribute;
 import com.lilithsthrone.game.character.attributes.CorruptionLevel;
 import com.lilithsthrone.game.character.attributes.ObedienceLevel;
@@ -106,20 +102,14 @@ import com.lilithsthrone.game.character.body.valueEnums.Capacity;
 import com.lilithsthrone.game.character.body.valueEnums.CoveringModifier;
 import com.lilithsthrone.game.character.body.valueEnums.CoveringPattern;
 import com.lilithsthrone.game.character.body.valueEnums.CumProduction;
-import com.lilithsthrone.game.character.body.valueEnums.EyeShape;
 import com.lilithsthrone.game.character.body.valueEnums.Femininity;
-import com.lilithsthrone.game.character.body.valueEnums.FluidFlavour;
-import com.lilithsthrone.game.character.body.valueEnums.FluidModifier;
 import com.lilithsthrone.game.character.body.valueEnums.FootStructure;
 import com.lilithsthrone.game.character.body.valueEnums.GenitalArrangement;
 import com.lilithsthrone.game.character.body.valueEnums.HornLength;
 import com.lilithsthrone.game.character.body.valueEnums.LegConfiguration;
 import com.lilithsthrone.game.character.body.valueEnums.Muscle;
 import com.lilithsthrone.game.character.body.valueEnums.NippleShape;
-import com.lilithsthrone.game.character.body.valueEnums.OrificeDepth;
-import com.lilithsthrone.game.character.body.valueEnums.OrificeElasticity;
 import com.lilithsthrone.game.character.body.valueEnums.OrificeModifier;
-import com.lilithsthrone.game.character.body.valueEnums.OrificePlasticity;
 import com.lilithsthrone.game.character.body.valueEnums.PenetrationGirth;
 import com.lilithsthrone.game.character.body.valueEnums.PenetrationModifier;
 import com.lilithsthrone.game.character.body.valueEnums.PenisLength;
@@ -130,20 +120,13 @@ import com.lilithsthrone.game.character.effects.AbstractStatusEffect;
 import com.lilithsthrone.game.character.effects.Perk;
 import com.lilithsthrone.game.character.effects.PerkCategory;
 import com.lilithsthrone.game.character.effects.StatusEffect;
-import com.lilithsthrone.game.character.fetishes.AbstractFetish;
 import com.lilithsthrone.game.character.fetishes.Fetish;
 import com.lilithsthrone.game.character.fetishes.FetishDesire;
 import com.lilithsthrone.game.character.gender.Gender;
 import com.lilithsthrone.game.character.gender.GenderPronoun;
 import com.lilithsthrone.game.character.gender.PronounType;
-import com.lilithsthrone.game.character.markings.AbstractTattooType;
-import com.lilithsthrone.game.character.markings.TattooCountType;
-import com.lilithsthrone.game.character.markings.TattooCounterType;
-import com.lilithsthrone.game.character.markings.TattooType;
-import com.lilithsthrone.game.character.markings.TattooWritingStyle;
 import com.lilithsthrone.game.character.npc.NPC;
 import com.lilithsthrone.game.character.npc.NPCFlagValue;
-import com.lilithsthrone.game.character.npc.NPCGenerationFlag;
 import com.lilithsthrone.game.character.npc.dominion.Brax;
 import com.lilithsthrone.game.character.npc.dominion.Lilaya;
 import com.lilithsthrone.game.character.npc.dominion.Nyan;
@@ -156,28 +139,23 @@ import com.lilithsthrone.game.character.persona.OccupationTag;
 import com.lilithsthrone.game.character.persona.PersonalityTrait;
 import com.lilithsthrone.game.character.persona.Relationship;
 import com.lilithsthrone.game.character.persona.SexualOrientation;
-import com.lilithsthrone.game.character.pregnancy.FertilisationType;
 import com.lilithsthrone.game.character.quests.Quest;
 import com.lilithsthrone.game.character.quests.QuestLine;
 import com.lilithsthrone.game.character.race.AbstractRace;
 import com.lilithsthrone.game.character.race.AbstractRacialBody;
 import com.lilithsthrone.game.character.race.AbstractSubspecies;
 import com.lilithsthrone.game.character.race.FurryPreference;
-import com.lilithsthrone.game.character.race.Nocturnality;
 import com.lilithsthrone.game.character.race.Race;
 import com.lilithsthrone.game.character.race.RaceStage;
 import com.lilithsthrone.game.character.race.RacialBody;
 import com.lilithsthrone.game.character.race.Subspecies;
 import com.lilithsthrone.game.combat.CombatBehaviour;
 import com.lilithsthrone.game.combat.DamageType;
-import com.lilithsthrone.game.combat.DamageVariance;
 import com.lilithsthrone.game.combat.spells.Spell;
 import com.lilithsthrone.game.combat.spells.SpellSchool;
 import com.lilithsthrone.game.combat.spells.SpellUpgrade;
 import com.lilithsthrone.game.dialogue.AbstractDialogueFlagValue;
 import com.lilithsthrone.game.dialogue.DialogueFlagValue;
-import com.lilithsthrone.game.dialogue.DialogueManager;
-import com.lilithsthrone.game.dialogue.DialogueNode;
 import com.lilithsthrone.game.dialogue.encounters.AbstractEncounter;
 import com.lilithsthrone.game.dialogue.encounters.Encounter;
 import com.lilithsthrone.game.inventory.AbstractSetBonus;
@@ -190,22 +168,16 @@ import com.lilithsthrone.game.inventory.clothing.AbstractClothingType;
 import com.lilithsthrone.game.inventory.clothing.ClothingType;
 import com.lilithsthrone.game.inventory.item.AbstractItemType;
 import com.lilithsthrone.game.inventory.item.ItemType;
-import com.lilithsthrone.game.inventory.outfit.AbstractOutfit;
-import com.lilithsthrone.game.inventory.outfit.OutfitType;
 import com.lilithsthrone.game.inventory.weapon.AbstractWeaponType;
 import com.lilithsthrone.game.inventory.weapon.WeaponType;
-import com.lilithsthrone.game.occupantManagement.slave.SlavePermission;
 import com.lilithsthrone.game.occupantManagement.slave.SlavePermissionSetting;
 import com.lilithsthrone.game.settings.ForcedFetishTendency;
 import com.lilithsthrone.game.settings.ForcedTFTendency;
 import com.lilithsthrone.game.sex.GenericSexFlag;
-import com.lilithsthrone.game.sex.OrgasmCumTarget;
 import com.lilithsthrone.game.sex.SexAreaOrifice;
 import com.lilithsthrone.game.sex.SexAreaPenetration;
 import com.lilithsthrone.game.sex.SexPace;
 import com.lilithsthrone.game.sex.SexParticipantType;
-import com.lilithsthrone.game.sex.positions.slots.SexSlot;
-import com.lilithsthrone.game.sex.positions.slots.SexSlotManager;
 import com.lilithsthrone.game.sex.sexActions.baseActions.ToyVagina;
 import com.lilithsthrone.main.Main;
 import com.lilithsthrone.rendering.SVGImages;
@@ -225,11 +197,8 @@ import com.lilithsthrone.world.places.AbstractPlaceUpgrade;
 import com.lilithsthrone.world.places.PlaceType;
 import com.lilithsthrone.world.places.PlaceUpgrade;
 
-import jdk.nashorn.api.scripting.NashornScriptEngine;
-import jdk.nashorn.api.scripting.NashornScriptEngineFactory;
-// Use the following imports when using the org.openjdk.nashorn dependency:
-//import org.openjdk.nashorn.api.scripting.NashornScriptEngine;
-//import org.openjdk.nashorn.api.scripting.NashornScriptEngineFactory;
+import org.openjdk.nashorn.api.scripting.NashornScriptEngine;
+import org.openjdk.nashorn.api.scripting.NashornScriptEngineFactory;
 
 /**
  * @since 0.1.0
@@ -248,7 +217,7 @@ public class UtilText {
 	private static Body body;
 	private static AbstractRace race;
 	private static CharacterInventory inventory;
-
+	
 //	private static List<GameCharacter> specialNPCList = new ArrayList<>();
 	private static boolean parseCapitalise;
 	private static boolean parseAddPronoun;
@@ -580,10 +549,6 @@ public class UtilText {
 		return "<i>"+parseSpeech(text, target, true, false, false).replaceAll("class='speech'", "class='thoughts'")+"</i>";
 	}
 
-	public static String parseNPCThought(String text, Femininity femininity) {
-		return "<i>"+parseNPCSpeech(text, femininity, false, false).replaceAll("class='speech'", "class='thoughts'")+"</i>";
-	}
-	
 	public static String parseNPCSpeech(String text, Femininity femininity) {
 		return parseNPCSpeech(text, femininity, false, false);
 	}
@@ -596,7 +561,7 @@ public class UtilText {
 		if (stutter) {
 			modifiedSentence = Util.addStutter(modifiedSentence, 4);
 		}
-		return "<span class='speech' style='color:" + femininity.getSpeechColour().toWebHexString() + ";'>" + modifiedSentence + "</span>";
+		return "<span class='speech' style='color:" + femininity.getColour().toWebHexString() + ";'>" + modifiedSentence + "</span>";
 	}
 	
 	public static String getDisabledResponse(String label) {
@@ -673,17 +638,10 @@ public class UtilText {
 		return "&#9930;";
 	}
 
-	public static String getBasicInfinitySymbol() {
-		return "<span style='font-weight:normal; font-family:sans-serif; font-size:1.5em;'>&#8734;</span>";
-	}
-
-	/**
-	 * The infinity symbol really, really sucks in the default LT font.
-	 */
 	public static String getInfinitySymbol(boolean largerFont) {
 		//"&#9854;";
 //		return "<span style='font-family:serif; font-weight:normal; font-size:1.25em;'>&#8734;</span>";
-		return "<span style='font-weight:normal; font-family:sans-serif; color:"+PresetColour.GENERIC_EXCELLENT.toWebHexString()+"; "+(largerFont?"font-size:28px;":"")+"'>&#8734;</span>";
+		return "<span style='font-weight:normal; color:"+PresetColour.GENERIC_EXCELLENT.toWebHexString()+"; "+(largerFont?"font-size:28px;":"")+"'>&#8734;</span>";
 	}
 
 	public static String applyGlow(String input) {
@@ -740,10 +698,6 @@ public class UtilText {
 	public static String formatAsMoneyUncoloured(int money, String tag) {
 		return formatAsMoney(money, tag, null);
 	}
-
-	public static String formatAsMoneyUncoloured(String money, String tag) {
-		return formatAsMoney(money, tag, null);
-	}
 	
 	public static String formatAsMoney(int money, String tag) {
 		return formatAsMoney(money, tag, PresetColour.TEXT);
@@ -794,6 +748,12 @@ public class UtilText {
 		} else {
 			return "a";
 		}
+	}
+	
+	private static String[] femaleCumNames = new String[] { "juices" };
+
+	public static String getFemaleCumName() {
+		return femaleCumNames[Util.random.nextInt(femaleCumNames.length)];
 	}
 
 	/**
@@ -1035,12 +995,6 @@ public class UtilText {
 			for (int i = 0; i < input.length(); i++) {
 				char c = input.charAt(i);
 				
-				// Advance the parser index to the final `>` if we encounter an SVG
-				if(c == 'g' && substringMatchesInReverseAtIndex(input, "<svg", i)) {
-					i = input.indexOf("</svg>", i) + 5; // 5 == "</svg>".length() - 1
-					continue;
-				}
-
 				if(usingConditionalBrackets) {
 					if(input.charAt(i)=='(') {
 						conditionalOpenBrackets++;
@@ -1317,44 +1271,8 @@ public class UtilText {
 			}
 			
 			if (startIndex != 0) {
-				StringBuilder errMsg = new StringBuilder("Error in parsing: ");
-				switch(input.charAt(startIndex)) {
-					case '#':
-						errMsg.append("Missing #ENDIF for #IF at ");
-						break;
-					case '[':
-						errMsg.append("Missing ] for [ at ");
-						break;
-					default:
-						errMsg.append("Non-fatal error at ");
-						break;
-				}
-				errMsg.append(startIndex);
-				if(target != null) {
-					errMsg.append(" Target: '" + target + "'");
-				}
-				if(command != null) {
-					errMsg.append(" Command: '" + command + "'");
-				}
-				{
-					int errContext = 30;
-					errMsg.append("\nContext:  " + input.substring(Math.max(0, startIndex - errContext), Math.min(input.length(), startIndex + errContext)));
-					errMsg.append("\nLocation: ");// + "-".repeat(Math.min(errContext, startIndex)) + "^"); // .repeat was introduced in Java 11 and I use an older version
-					for(int i=0;i<Math.min(errContext, startIndex);i++) {
-						errMsg.append("-");
-					}
-					errMsg.append("^");
-				}
-				System.err.println(errMsg);
+				System.err.println("Error in parsing: StartIndex:"+startIndex+" ("+target+", "+command+") - "+input.substring(startIndex, Math.min(input.length()-1, startIndex+20)));
 				parsingCharactersForSpeech = parsingCharactersForSpeechSaved;
-				switch(input.charAt(startIndex)) {
-					// Replace the problematic character with its html entity, so that the error does
-					// not propagate further.
-					case '#':
-						return input.substring(0, startIndex) + "&#35;" + input.substring(startIndex+1);
-					case '[':
-						return input.substring(0, startIndex) + "&#91;" + input.substring(startIndex+1);
-				}
 				return input;
 			}
 			if (startedParsingSegmentAt < input.length()) {
@@ -1470,7 +1388,7 @@ public class UtilText {
 				"Formats the supplied number as money, using the tag as the html tag."){
 			@Override
 			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				return UtilText.formatAsMoneyUncoloured(arguments.split(", ")[0], arguments.split(", ")[1]);
+				return UtilText.formatAsMoneyUncoloured(Integer.valueOf(arguments.split(", ")[0]), arguments.split(", ")[1]);
 			}
 		});
 		
@@ -1499,7 +1417,7 @@ public class UtilText {
 			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
 				List<String> strings = new ArrayList<>();
 				for(String s : arguments.split("\\|")) {
-					strings.add(UtilText.parse(s.trim()));
+					strings.add(UtilText.parse(s));
 				}
 				strings.removeIf(s->s.trim().isEmpty());
 				if(strings.isEmpty()) {
@@ -2003,36 +1921,6 @@ public class UtilText {
 			@Override
 			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
 				return String.valueOf(character.getHistory().getWorkHourEnd());
-			}
-		});
-		
-		commandsList.add(new ParserCommand(
-				Util.newArrayListOfValues(
-						"jobTimeStart",
-						"jobStartTime"),
-				true,
-				true,
-				"",
-				"Returns the locale-adapted start time for this character's job. Does not work for slave jobs."){
-			@Override
-			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				return Units.time(LocalTime.of(character.getHistory().getWorkHourStart(), 0, 0));
-			}
-		});
-		
-		commandsList.add(new ParserCommand(
-				Util.newArrayListOfValues(
-						"jobTimeEnd",
-						"jobEndTime",
-						"jobTimeFinish",
-						"jobFinishTime"),
-				true,
-				true,
-				"",
-				"Returns the locale-adapted end time for this character's job. Does not work for slave jobs."){
-			@Override
-			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				return Units.time(LocalTime.of(character.getHistory().getWorkHourEnd(), 0, 0));
 			}
 		});
 		
@@ -2635,14 +2523,14 @@ public class UtilText {
 				if(arguments!=null && Boolean.valueOf(arguments)) {
 					boolean pronoun = parseAddPronoun;
 					parseAddPronoun = false;
-					String name = character.isRaceConcealed()?"unknown race":character.getSubspecies().getFeralName(character.getBody());
+					String name = character.isRaceConcealed()?"unknown race":character.getSubspecies().getFeralName(character);
 					return "<span style='color:"+(character.isRaceConcealed()?PresetColour.TEXT_GREY:character.getSubspecies().getColour(character)).toWebHexString()+";'>"
 							+ (parseCapitalise
 									?Util.capitaliseSentence((pronoun?UtilText.generateSingularDeterminer(name)+" ":"")+name)
 									:(pronoun?UtilText.generateSingularDeterminer(name)+" ":"")+name)
 							+"</span>";
 				}
-				return character.getSubspecies().getFeralName(character.getBody());
+				return character.getSubspecies().getFeralName(character);
 			}
 		});
 
@@ -2663,7 +2551,7 @@ public class UtilText {
 				Elemental elemental = ((Elemental)character);
 				String name = elemental.getPassiveForm()==null
 						?"wisp"
-						:elemental.getPassiveForm().getFeralName(elemental.getBody());
+						:elemental.getPassiveForm().getFeralName(elemental);
 				if(arguments!=null && Boolean.valueOf(arguments)) {
 					boolean pronoun = parseAddPronoun;
 					parseAddPronoun = false;
@@ -3250,12 +3138,11 @@ public class UtilText {
 			@Override
 			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
 				Femininity fem =  Femininity.valueOf(character.getFemininityValue());
-				boolean pronoun = parseAddPronoun;
-				parseAddPronoun = false;
 				if(arguments!=null && Boolean.valueOf(arguments)) {
-					return "<span style='color:"+fem.getColour().toWebHexString()+";'>"+fem.getName(pronoun)+"</span>";
+					return "<span style='color:"+fem.getColour().toWebHexString()+";'>"+fem.getName(false)+"</span>";
+							
 				}
-				return fem.getName(pronoun);
+				return fem.getName(false);
 			}
 		});
 		
@@ -3522,104 +3409,6 @@ public class UtilText {
 					return parseThought(arguments, character);
 				} else {
 					return parseThought("...", character);
-				}
-			}
-		});
-		
-		commandsList.add(new ParserCommand(
-				Util.newArrayListOfValues(
-						"thoughtMasculine",
-						"masculineThought"),
-				false,
-				false,
-				"(thought content)",
-				"Parses the containing dialogue as though a generic, masculine character is saying it."){
-			@Override
-			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				if(arguments!=null) {
-					return parseNPCThought(arguments, Femininity.MASCULINE);
-				} else {
-					return parseNPCThought("...", Femininity.MASCULINE);
-				}
-			}
-		});
-		
-		commandsList.add(new ParserCommand(
-				Util.newArrayListOfValues(
-						"thoughtMasculineStrong",
-						"thoughtMasculineHeavy",
-						"thoughtMasculinePlus",
-						"masculineStrongThought",
-						"masculineHeavyThought",
-						"masculinePlusThought"),
-				false,
-				false,
-				"(thought content)",
-				"Parses the containing dialogue as though a generic, very masculine character is saying it."){
-			@Override
-			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				if(arguments!=null) {
-					return parseNPCThought(arguments, Femininity.MASCULINE_STRONG);
-				} else {
-					return parseNPCThought("...", Femininity.MASCULINE_STRONG);
-				}
-			}
-		});
-		
-		commandsList.add(new ParserCommand(
-				Util.newArrayListOfValues(
-						"thoughtAndrogynous",
-						"androgynousThought"),
-				false,
-				false,
-				"(thought content)",
-				"Parses the containing dialogue as though a generic, androgynous character is saying it."){
-			@Override
-			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				if(arguments!=null) {
-					return parseNPCThought(arguments, Femininity.ANDROGYNOUS);
-				} else {
-					return parseNPCThought("...", Femininity.ANDROGYNOUS);
-				}
-			}
-		});
-		
-		commandsList.add(new ParserCommand(
-				Util.newArrayListOfValues(
-						"thoughtFeminine",
-						"feminineThought"),
-				false,
-				false,
-				"(thought content)",
-				"Parses the containing dialogue as though a generic, feminine character is saying it."){
-			@Override
-			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				if(arguments!=null) {
-					return parseNPCThought(arguments, Femininity.FEMININE);
-				} else {
-					return parseNPCThought("...", Femininity.FEMININE);
-				}
-			}
-		});
-		
-		commandsList.add(new ParserCommand(
-				Util.newArrayListOfValues(
-						"thoughtFeminineStrong",
-						"thoughtFeminineHeavy",
-						"thoughtFemininePlus",
-						"feminineStrongThought",
-						"feminineHeavyThought",
-						"femininePlusThought"),
-				false,
-				false,
-				"(thought content)",
-				"Parses the containing dialogue as though a generic, very feminine character is saying it."){
-			@Override
-			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				if(arguments!=null) {
-					return parseNPCThought(arguments, Femininity.FEMININE_STRONG);
-				} else {
-					return parseNPCThought("...", Femininity.FEMININE_STRONG);
 				}
 			}
 		});
@@ -4460,7 +4249,7 @@ public class UtilText {
 				true,
 				"(real pronoun)",
 				"Returns the correct pronoun for this character (you, him, her). By default, returns 'you' for player character."
-				+ " If you need the regular third-person player character pronoun, pass in 'true' as an argument."){
+				+ " If you need the regular third-person player character pronoun, passin 'true' as an argument."){
 			@Override
 			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
 				if(arguments==null && isPlayer(target, character)) {
@@ -5527,7 +5316,7 @@ public class UtilText {
 				true,
 				true,
 				"",
-				"Returns the descriptor of the length of this character's antennae.",
+				"Returns the descriptor of the length of this cahracter's antennae.",
 				BodyPartType.ANTENNA){
 			@Override
 			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
@@ -5615,7 +5404,7 @@ public class UtilText {
 				if(character.getCovering(character.getArmCovering()).getModifier().isFurryModifier()) {
 					descriptors.add("furry");
 				} else {
-					if(Main.game.isBodyHairEnabled() && character.getUnderarmHair()!=BodyHair.ZERO_NONE) {
+					if(character.getUnderarmHair()!=BodyHair.ZERO_NONE) {
 						descriptors.add("hairy");
 					} else {
 						descriptors.add("smooth");
@@ -5624,14 +5413,8 @@ public class UtilText {
 				if(character.isFeminine()) {
 					descriptors.add("feminine");
 					descriptors.add("sexy");
-					descriptors.add("hot");
 				} else {
 					descriptors.add("masculine");
-				}
-				if(character.getMuscleValue()>=Muscle.THREE_MUSCULAR.getMinimumValue()) {
-					descriptors.add("muscular");
-				} else if(character.getMuscleValue()<Muscle.ONE_LIGHTLY_MUSCLED.getMinimumValue() && character.getBodySizeValue()>=BodySize.THREE_LARGE.getMinimumValue()){
-					descriptors.add("chubby");
 				}
 				return applyDescriptor(
 						Util.randomItemFrom(descriptors),
@@ -6914,11 +6697,11 @@ public class UtilText {
 				true,
 				true,
 				"",
-				"Returns the descriptor of the length of this character's horns.",
+				"Returns the descriptor of the length of this cahracter's horns.",
 				BodyPartType.HORN){
 			@Override
 			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-				return HornLength.getLengthFromInt(character.getHornLengthValue()).getDescriptor();
+				return HornLength.getLengthFromInt(character.getHornLength()).getDescriptor();
 			}
 		});
 		
@@ -9565,7 +9348,7 @@ public class UtilText {
 				return "<i style='color:"+PresetColour.GENERIC_BAD.toWebHexString()+";'>(Error in script parsing!)</i>";
 			}
 			
-		} else if(Main.game!=null && Main.game.isStarted()) {
+		} else if(Main.game.isStarted()) {
 			if(engine==null) {
 				initScriptEngine();
 			}
@@ -9672,17 +9455,7 @@ public class UtilText {
 	public static GameCharacter findFirstCharacterFromParserTarget(String target) {
 		AbstractParserTarget parserTarget = findParserTargetWithTag(target);
 		
-		List<GameCharacter> specialNPCs = new ArrayList<>();
-		if(Main.game.getActiveNPC()!=null && Main.game.getCharactersPresent().contains(Main.game.getActiveNPC())) {
-			specialNPCs.add(Main.game.getActiveNPC()); // Make sure active NPC is in index 0 if they're also present
-		}
-		for(NPC gc : Main.game.getCharactersPresent()) {
-			if(!specialNPCs.contains(gc)) {
-				specialNPCs.add(gc);
-			}
-		}
-		
-		return parserTarget.getCharacter(target, specialNPCs);
+		return parserTarget.getCharacter(target, new ArrayList<>(Main.game.getCharactersPresent()));
 	}
 
 	private static ParserCommand findCommandWithTag(String command) {
@@ -9775,9 +9548,6 @@ public class UtilText {
 		engine.put("dialogueManager", Main.game.getDialogueManager());
 		
 		// Java classes:
-		for(Month month : Month.values()) {
-			engine.put("MONTH_"+month, month);
-		}
 		for(DayOfWeek dayOfWeek : DayOfWeek.values()) {
 			engine.put("DOW_"+dayOfWeek, dayOfWeek);
 		}
@@ -9796,48 +9566,19 @@ public class UtilText {
 		for(AbstractSetBonus setBonus : SetBonus.getAllSetBonuses()) {
 			engine.put("SET_BONUS_"+SetBonus.getIdFromSetBonus(setBonus), setBonus);
 		}
-		for(AbstractOutfit outfit : OutfitType.getAllOutfits()) {
-			engine.put("OUTFIT_"+OutfitType.getIdFromOutfitType(outfit), outfit);
-		}
-		for(OutfitType outfitType : OutfitType.values()) {
-			engine.put("OUTFIT_TYPE_"+outfitType.toString(), outfitType);
-		}
 		for(ItemTag it : ItemTag.values()) {
 			engine.put("ITEM_TAG_"+it.toString(), it);
 		}
 		for(CoverableArea ca : CoverableArea.values()) {
-			engine.put("COVERABLE_AREA_"+ca.toString(), ca);
 			engine.put("CA_"+ca.toString(), ca);
 		}
 		for(InventorySlot is : InventorySlot.values()) {
-			engine.put("INV_SLOT_"+is.toString(), is);
 			engine.put("IS_"+is.toString(), is);
-		}
-		for(EquipClothingSetting ecs : EquipClothingSetting.values()) {
-			engine.put("EQUIP_CLOTHING_SETTING_"+ecs.toString(), ecs);
-			engine.put("ECS_"+ecs.toString(), ecs);
-		}
-		
-		// Tattoos:
-		for(AbstractTattooType tattooType : TattooType.getAllTattooTypes()) {
-			engine.put("TATTOO_"+TattooType.getIdFromTattooType(tattooType), tattooType);
-		}
-		for(TattooCounterType tattooCounterType : TattooCounterType.values()) {
-			engine.put("TATTOO_COUNTER_"+tattooCounterType.toString(), tattooCounterType);
-		}
-		for(TattooCountType tattooCountType : TattooCountType.values()) {
-			engine.put("TATTOO_COUNT_"+tattooCountType.toString(), tattooCountType);
-		}
-		for(TattooWritingStyle tattooWritingStyle : TattooWritingStyle.values()) {
-			engine.put("TATTOO_WRITING_STYLE_"+tattooWritingStyle.toString(), tattooWritingStyle);
 		}
 		
 		// Misc.:
 		for(Colour colour : PresetColour.getAllPresetColours()) {
 			engine.put("COLOUR_"+PresetColour.getIdFromColour(colour), colour);
-		}
-		for(Entry<DialogueNode, String> dn: DialogueManager.getDialogueToIdMap().entrySet()) {
-			engine.put("DN_"+dn.getValue(), dn.getKey());
 		}
 		
 		// Bodies:
@@ -9855,12 +9596,6 @@ public class UtilText {
 		}
 		for(Gender gender : Gender.values()) {
 			engine.put("GENDER_"+gender.toString(), gender);
-		}
-		for(FertilisationType ft : FertilisationType.values()) {
-			engine.put("FERTILISATION_"+ft.toString(), ft);
-		}
-		for(Nocturnality noc : Nocturnality.values()) {
-			engine.put("NOCTURNALITY_"+noc.toString(), noc);
 		}
 		for(LegConfiguration legConf : LegConfiguration.values()) {
 			engine.put("LEG_CONFIGURATION_"+legConf.toString(), legConf);
@@ -9895,21 +9630,8 @@ public class UtilText {
 		for(CumProduction cumProduction : CumProduction.values()) {
 			engine.put("CUM_PRODUCTION_"+cumProduction.toString(), cumProduction);
 		}
-		for(FluidModifier fluidModifier : FluidModifier.values()) {
-			engine.put("FLUID_MODIFIER_"+fluidModifier.toString(), fluidModifier);
-		}
-		for(FluidFlavour fluidFlavour : FluidFlavour.values()) {
-			engine.put("FLUID_FLAVOUR_"+fluidFlavour.toString(), fluidFlavour);
-		}
 		for(BodyPartTag bpt : BodyPartTag.values()) {
 			engine.put("BODY_PART_TAG_"+bpt.toString(), bpt);
-		}
-		// Spelling errors which were corrected in PR#1603 but which now need correct parser references for old mod version support:
-		engine.put("BODY_PART_TAG_TAIL_SUTABLE_FOR_PENETRATION", BodyPartTag.TAIL_SUITABLE_FOR_PENETRATION);
-		engine.put("BODY_PART_TAG_TAIL_NEVER_SUTABLE_FOR_PENETRATION", BodyPartTag.TAIL_NEVER_SUITABLE_FOR_PENETRATION);
-
-		for(PenetrationGirth girth : PenetrationGirth.values()) {
-			engine.put("PENETRATION_GIRTH_"+girth.toString(), girth);
 		}
 		for(PenetrationModifier penMod : PenetrationModifier.values()) {
 			engine.put("PENETRATION_MODIFIER_"+penMod.toString(), penMod);
@@ -9928,21 +9650,6 @@ public class UtilText {
 		}
 		for(BodyShape bodyShape : BodyShape.values()) {
 			engine.put("BODY_SHAPE_"+bodyShape.toString(), bodyShape);
-		}
-		for(Capacity capacity : Capacity.values()) {
-			engine.put("CAPACITY_"+capacity.toString(), capacity);
-		}
-		for(OrificeDepth depth : OrificeDepth.values()) {
-			engine.put("DEPTH_"+depth.toString(), depth);
-		}
-		for(OrificeElasticity elasticity : OrificeElasticity.values()) {
-			engine.put("ELASTICITY_"+elasticity.toString(), elasticity);
-		}
-		for(OrificePlasticity plasticity : OrificePlasticity.values()) {
-			engine.put("PLASTICITY_"+plasticity.toString(), plasticity);
-		}
-		for(EyeShape eyeShape : EyeShape.values()) {
-			engine.put("EYE_SHAPE_"+eyeShape.toString(), eyeShape);
 		}
 		// Types:
 		for(AbstractFluidType fluidType : FluidType.getAllFluidTypes()) {
@@ -10020,8 +9727,8 @@ public class UtilText {
 		
 		
 		// Effects & persona:
-		for(AbstractFetish f : Fetish.getAllFetishes()) {
-			engine.put(Fetish.getIdFromFetish(f), f);
+		for(Fetish f : Fetish.values()) {
+			engine.put(f.toString(), f);
 		}
 		for(FetishDesire fetishDesire : FetishDesire.values()) {
 			engine.put("FETISH_DESIRE_"+fetishDesire.toString(), fetishDesire);
@@ -10042,7 +9749,6 @@ public class UtilText {
 			engine.put("PERK_CATEGORY_"+pk.toString(), pk);
 		}
 		for(AbstractStatusEffect sa : StatusEffect.getAllStatusEffects()) {
-			engine.put("STATUS_EFFECT_"+StatusEffect.getIdFromStatusEffect(sa), sa);
 			engine.put("SE_"+StatusEffect.getIdFromStatusEffect(sa), sa);
 		}
 		for(AbstractAttribute att : Attribute.getAllAttributes()) {
@@ -10051,17 +9757,11 @@ public class UtilText {
 		for(CorruptionLevel corruption : CorruptionLevel.values()) {
 			engine.put("CORRUPTION_LEVEL_"+corruption.toString(), corruption);
 		}
-		for(AlcoholLevel alcoholLevel : AlcoholLevel.values()) {
-			engine.put("ALCOHOL_LEVEL_"+alcoholLevel.toString(), alcoholLevel);
-		}
 		
 		
 		// Combat:
 		for(DamageType damageType : DamageType.values()) {
 			engine.put("DAMAGE_TYPE_"+damageType.toString(), damageType);
-		}
-		for(DamageVariance damageVariance : DamageVariance.values()) {
-			engine.put("DAMAGE_VARIANCE_"+damageVariance.toString(), damageVariance);
 		}
 		for(SpellSchool spellSchool : SpellSchool.values()) {
 			engine.put("SPELL_SCHOOL_"+spellSchool.toString(), spellSchool);
@@ -10089,16 +9789,6 @@ public class UtilText {
 		for(GenericSexFlag flag : GenericSexFlag.values()) {
 			engine.put("SEX_FLAG_"+flag.toString(), flag);
 		}
-		for(SexPace pace : SexPace.values()) {
-			engine.put("SEX_PACE_"+pace.toString(), pace);
-		}
-		for(OrgasmCumTarget oct : OrgasmCumTarget.values()) {
-			engine.put("OCT_"+oct.toString(), oct);
-		}
-		for(Entry<String, SexSlot> slot : SexSlotManager.getIdToSexSlotMap().entrySet()) {
-			engine.put("SEX_SLOT_"+slot.getKey(), slot.getValue());
-		}
-		
 		
 		// Other:
 		for(Season season : Season.values()) {
@@ -10115,12 +9805,6 @@ public class UtilText {
 		}
 		for(NPCFlagValue flag : NPCFlagValue.values()) {
 			engine.put("NPC_FLAG_"+flag.toString(), flag);
-		}
-		for(NPCGenerationFlag flag : NPCGenerationFlag.values()) {
-			engine.put("NPC_GEN_FLAG_"+flag.toString(), flag);
-		}
-		for(SlavePermission permission : SlavePermission.values()) {
-			engine.put("SLAVE_PERMISSION_"+permission.toString(), permission);
 		}
 		for(SlavePermissionSetting permission : SlavePermissionSetting.values()) {
 			engine.put("SLAVE_PERMISSION_SETTING_"+permission.toString(), permission);
@@ -10299,7 +9983,7 @@ public class UtilText {
 			@Override
 			public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
 				try {
-					return getBodyPartFromType(bodyPart,character).getType().getRace().getName(character.getBody(), getBodyPartFromType(bodyPart, character).isFeral(character));
+					return getBodyPartFromType(bodyPart,character).getType().getRace().getName(character, getBodyPartFromType(bodyPart, character).isFeral(character));
 				} catch(Exception ex) {
 					return "null_body_part";
 				}
@@ -10739,9 +10423,9 @@ public class UtilText {
 		}
 		
 		if (character.isFeminine()) {
-			return subspecies.getSingularFemaleName(character.getBody());
+			return subspecies.getSingularFemaleName(character);
 		} else {
-			return subspecies.getSingularMaleName(character.getBody());
+			return subspecies.getSingularMaleName(character);
 		}
 	}
 	
@@ -10749,9 +10433,9 @@ public class UtilText {
 		if(race==null)
 			return "";
 		if (character.isFeminine()) {
-			return race.getPluralFemaleName(character.getBody());
+			return race.getPluralFemaleName(character);
 		} else {
-			return race.getPluralMaleName(character.getBody());
+			return race.getPluralMaleName(character);
 		}
 	}
 	
@@ -10866,9 +10550,6 @@ public class UtilText {
 		engine.put(tag, getInventoryForParsing());
 	}
 	
-	
-	// Memoization improvement attempts follow from here:
-	
 //	private static final Map<String, CompiledScript> memo = new HashMap<>();
 //	private static final int memo_limit = 500;
 	// NOTE: This was causing a bug where upon loading a saved game, the player's race wasn't being recalculated properly for some reason.
@@ -10900,10 +10581,8 @@ public class UtilText {
 //			script = memo.get(command);
 //		}
 //		return script.eval(((NashornScriptEngine)engine).getContext());
-//		//return script.eval();
-		
-		
-		// This is the old code which works but is slow:
+////		return script.eval();
+
 		CompiledScript script = ((NashornScriptEngine)engine).compile(command);
 		return script.eval();
 	}
